2005-01-11 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Bug fix for the python part use
   
2005-01-11 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * gdcmPython/gdcm.i : bug fix when compiling with MSCV

2005-01-11 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
   * Untangle TransferSynatx from gdcm::Document. Now Document only manipulate
     a string and should ask the global TS dict what are the propreties of 
     the transfer syntax

2005-01-11 Jean-Pierre Roux <jpr@creatis.univ-lyon1.fr>
   * Replace confusing name SwitchSwapToBigEndian name by SwitchByteSwapCode
   * Add the Document::HandleOutOfGroup0002(uint16_t group) method
	    to swap the Swap Code, at parsing time, when we come out of group 0002
		 and Transfer Syntax is Big Endian
		 We should be able to read now 'true DICOM" Big Endian coded images
	 * Add optional run time SetDebugOn (last param) for PrintHeader, PrintFile
	 * Replace the french 'Transfert Syntax' by the english 'Transfer Syntax'

2005-01-10 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
   * Hopefully fix the bug on MacOSX and static global initialization.
   This is the only -minor- patch I found that both please MacOSX and VS6.
   Other patch would be to declare a const std::string & GDCM_UNFOUND() instead,
   but this would require a lot of change. Another approach would be that Global
   create those string and GDCM_UNFOUND becomes a pointer to a string (which
   gdcm::Global would destroy at exit).

2005-01-08 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
   * Fix bug on MacOSX with static initialization in a multy threaded
	 environment. static const string in a header file used to be ill
	 initialized provoquing the freeze of any tests. patch should solve this
	 issue.

2005-01-08 Jean-Pierre Roux <jpr@creatis.univ-lyon1.fr>
   * According to Benoit's suggestion, and without any objection from anybody