@@ -1,12 +1,12 @@
-from gdcmPython import *
+from gdcmPython.core import *
 import sys
 import os
 
 ### Get filename from command line or default it
 try:
-   FileName = sys.argv[1]
+   fileName = sys.argv[1]
 except IndexError:
-   FileName = os.path.join(GDCM_DATA_PATH, "test.acr")
+   fileName = os.path.join(GDCM_DATA_PATH, "test.acr")
 
 try:
    printLevel = int(sys.argv[2])
@@ -21,20 +21,22 @@ except IndexError:
 #s = raw_input("Hit any key in this window to exit")
 
 ### Build the header element list
-print FileName, type(FileName)
-toRead = gdcm.Header(FileName)
-if not toRead.IsReadable():
-   print "The ", FileName, " file is not readable with gdcm. Sorry."
+print fileName, type(fileName)
+header = gdcm.Header(fileName)
+if not header.IsReadable():
+   print "The ", fileName, " file is not readable with gdcm. Sorry."
    sys.exit()
 
 print "##############################################################"
 print "### Display all the elements and their respective values"
-print "## found in the ", FileName, " file."
+print "## found in the ", fileName, " file."
 print "##############################################################"
-###toRead.SetPrintLevel(printLevel)
-###toRead.Print()
 
-ValDict = toRead.GetEntry()
-for key in ValDict.keys():
- 	print "[%s] = [%s]" %(key, ValDict[key])
+header.Initialize()
+val=header.GetNextEntry()
+while(val):
+	val.Print()
+	print ""
+	val=header.GetNextEntry()
+val=None
 
